# llama-dashboard

./: app.py
deploy/: README.md  jtop-web.service
llama-dashboard/: app.py  config.toml.example  install.sh  pyproject.toml  setup.py
llama-dashboard/_hf_xet_stub/: pyproject.toml
llama-dashboard/scripts/: llama-dashboard.service
llama-dashboard/src/: cmd_builder.py  db.py  hf_download.py  ini_store.py  logs.py  models_fs.py  presets.py  server_ctrl.py  settings.py  system_stats.py
llama-dashboard/static/: app.css
llama-dashboard/templates/: base.html  dashboard.html
llama-dashboard/templates/downloads/: list.html
llama-dashboard/templates/mmproj/: list.html
llama-dashboard/templates/models/: list.html
llama-dashboard/templates/partials/: _download_row.html  _system_stats.html
llama-dashboard/templates/presets/: _row.html  edit.html  list.html
llama-dashboard/templates/settings/: index.html
static/: index.html  manifest.json
