[project]
name = "llama-dashboard"
version = "0.1.0"
description = "Lightweight dashboard for managing llama-server"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "huggingface_hub<0.33",
    "psutil",
    "tomli-w",
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
jetson = ["jetson-stats"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
